fix spacing and some style stuff

--- a/src/assets/scss/_mobile.scss
+++ b/src/assets/scss/_mobile.scss
@@ -31,6 +31,7 @@
 
   .content {
     margin-left: 0;
+    // width: 200%;
   }
   .main.has-nav + .footer {
     margin-left: 0;
@@ -38,13 +39,12 @@
 
   .sidebyside-toggles {
     margin-left: 0;
-    right: -102%;
+    right: -100%;
     position: absolute;
-    width: 50%;
+    width: 100%;
   }
 
   .sidebyside {
     width: 200%;
-    margin-left: 10px;
   }
 }
